Polish Java Kotlin part

--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -475,31 +475,53 @@ The SSD head is the part of the detector that computes category scores and box l
 
 \section{Previous State of the Application} \label{sec:previousState}
 
-This practical part of this work was built in top of already existing Android app TUM-Lens in its version 1.0. The core feature of this previous app version is image classification. The app is already cable of classifying the images received from the live camera stream in real-time. It can also classify images that are loaded from the disk of the Android device instead of images received from the camera stream. Moreover, the user can choose between different TensorFlow-Slim\footnote{\url{https://github.com/google-research/tf-slim}} models to classify the images. This enables the user compare the speed of similar detectors and also change the type of objects that can be detected as some of the available networks were trained on different data~\cite{maxJokel}. The most impactful design decision of the former developer of TUM-Lens was to run the entire classification locally on the Android device.
+The practical part of this work was built in top of the already existing Android application TUM-Lens in its version 1.0. The app is already cable of classifying images received from the live camera stream in real-time. It can also classify images that are loaded from the disk of the Android as an alternative operational mode to the camera stream classification. Moreover, the user can choose between different TensorFlow-Slim\footnote{\url{https://github.com/google-research/tf-slim}} models to classify the images. This enables the user to do two things: she can compare the speed of similar detectors and she can also change the type of objects that can be detected as some of the available networks were trained on different data~\cite{maxJokel} and with different class labels. The most impactful design decision of the former developer of TUM-Lens was to run the entire classification locally on the Android device.
 
 \section{Migration From Java to Kotlin}
 
-During their Google I/O conference 2017 Google announced that they are making the programming language Kotlin a first-class citizen in Android~\cite{googleIO17}. Two years later, Google refined this statement annunciating that Android development will "be increasingly Kotlin-first" and, at the present day, the Google Developers website recommends developers to choose Kotlin when they start building a new Android app~\cite{kotlinFirst}.
+During the Google I/O conference 2017 Google announced that they are making the programming language Kotlin a first-class citizen in Android~\cite{googleIO17}. Two years later, Google refined this statement annunciating that Android development will "be increasingly Kotlin-first" and, at the present day, the Google Developers website recommends developers to choose Kotlin when they start building a new Android app~\cite{kotlinFirst}. This alone can be reason enough to migrate an application to Kotlin - especially as long as its code base is still as manageable as the code base of TUM-Lens. To provide further explanations for the soundness of such a step we will first look at the advantages of Kotlin over Java - with particular emphasis on the context of TUM-Lens being developed by students as part of their final theses. After that, we look at the code conversion process from Java to Kotlin which is backed by powerful functionality integrated into Android Studio. We will also see an example for a pitfall that can be easily overlooked in such a semi-automated conversion process. Finally, we analyse how the number of lines of code changed from the Java files in app version 1.0 compare to their current state being fully migrated to Kotlin.
 
 \subsection{Advantages of Kotlin}
-Continuing the development of TUM-Lens in Kotlin has several advantages. As it is an app currently solely developed by students, the enhanced expressiveness and conciseness over Java makes it easier for fellow students to understand the entire application within the scope of a bachelor's or master's thesis. Moreover, students can learn more in the given amount of time they spend working on the app because they can focus more strongly on the implementation of new features instead of having to write boilerplate Java code. As students are more error prone than professional developers they surpassingly benefit from the safety features integrated into the Kotlin language. The most common cause for crashes of Java applications is the null pointer exception~\cite{nullPointerSamebug, nullPointerOverops}. With Kotlin being a strongly typed language a lot of these null pointer exceptions will be avoided because Kotlin's safety features help the developer to identify potential sources of such errors very easily. Google itself claims that Android apps are 20\% less likely to crash when they contain Kotlin code~\cite{kotlinFirst}.
+Continuing the development of TUM-Lens in Kotlin has several advantages. As the is app currently exclusively developed by students, Kotlin's enhanced expressiveness and conciseness over Java makes it easier for fellow students to understand the entire application within the scope of a bachelor's or master's thesis. Moreover, students can learn more in the given amount of time they spend working on the app because they can focus more strongly on the implementation of new features instead of having to write boilerplate Java code. As students are more error prone than professional developers they surpassingly benefit from the safety features integrated into the Kotlin language. The most common cause for crashes of Java applications is the null pointer exception~\cite{nullPointerSamebug, nullPointerOverops}. With Kotlin being a strongly typed language a lot of these null pointer exceptions will be avoided because Kotlin's safety features help the developer to identify potential sources of such errors very easily. Google itself claims that Android apps are 20\% less likely to crash when they contain Kotlin code~\cite{kotlinFirst}.
 
 \subsection{Converting Java Files to Kotlin Files}
 
 Android Studio offers a convenient way to convert files from Java to Kotlin. On macOS, you first have to open the Java file you want to migrate in Android Studio. Next, select \textit{Code} from the menu bar and then the menu item \textit{Convert Java File to Kotlin File}. If you have not yet configured Kotlin in your project, Android Studio will prompt you to do so or the migration will be aborted. Once Kotlin is set up Android Studio will immediately start the conversion. At the end of the process you are prompted with a dialogue asking "Some code in the rest of your project may require corrections after performing this conversion. Do you want to find such code and correct it too?" which we confirm by clicking on the yes-button. They file has now been converted from Java to Kotlin. In some cases it works right away but in the context of TUM-Lens manual adjustments were mandatory in every file because of several reasons. \\
-For a start, Android Studio could not infer all types automatically an being strongly typed it was necessary to restructure the code so the compiler could safely cast a variable to the appropriate type (called \textit{Smart Cast} in Kotlin). Usually this fell under one of two cases. In the first case of non-critical functionality, using Kotlin's safe call operator \code{?.} to access properties that might be null was sufficient. When it came to core functions, an additional safety check was the better option so that the compiler could be certain that a mutable property had not accidentally become null before being accessed and we could also react accordingly if the safety check failed. \\
-There was one part to Android Studio's built-in code migration that actually tricked me into introducing a bug: the conversion of getters and setters. Listing \autoref{code:kotlinProperty} shows the syntax for the declaration of a property in Kotlin. Every property has default public getters and setters  if not explicitly defined otherwise. Java, on the other hand, conventionally uses \code{getVariableName()} and \code{setVariableName(variableType newValue)} methods for every variable of a private class that shall be retrieved or overwritten from outside that class. 
 
-\begin{lstlisting}[style=standard, language=Kotlin, label=code:kotlinProperty, caption={Kotlin's declaration syntax for a mutable property. Getter and setter are optional. The property type is only optional when the compiler can infer it from the context (meaning either from the initializer or from the return type of the getter)}]
-	var <propertyName>[: <PropertyType>] [= <property_initializer>]
-			[<getter>]
-			[<setter>]
+For a start, Android Studio could not infer all types automatically. With Kotlin being strongly typed it was necessary to restructure the code so that the compiler could know each variable's type or safely cast a variable to the appropriate type (called \textit{Smart Cast} in Kotlin). We solved this situation using two different approaches distinguished by the importance of the successful execution of the respective piece of code. In the case of non-critical functionality, using Kotlin's safe call operator \code{?.} to access properties that might be null was sufficient. When it came to core functions, wrapping such functionality in an additional safety check was the better option. This not only capacitates the compiler to be certain that a mutable property had not accidentally become null before being accessed. It also enables us to react appropriately if the safety check fails. \\
+
+There was one part to Android Studio's built-in code migration that actually tricked me into introducing a bug: the conversion of getters and setters. Listing \autoref{code:kotlinProperty} shows the syntax for the declaration of a property in Kotlin. Every property has default public getters and setters if not explicitly defined otherwise. Java, on the other hand, conventionally uses \code{getVariableName()} and \code{setVariableName(variableType newValue)} methods for every variable of a private class that shall be retrieved or overwritten from outside that class. 
+
+\begin{lstlisting}[style=standard, language=Kotlin, label=code:kotlinProperty, caption={Kotlin's declaration syntax for a mutable property. Getter and setter are optional. The property type is only optional when the compiler can infer it from the context (meaning either from the initializer or from the return type of the getter).}]
+var <propertyName>[: <PropertyType>] [= <property_initializer>]
+	[<getter>]
+	[<setter>]
 \end{lstlisting}
 
+Listing \autoref{code:bugSourceJava} contains the original Java code and listing \autoref{code:bugSolutionKotlin} shows the correct translation to Kotlin. The default Kotlin getter is not enough here as it would omit the crucial conversion task. However, this is exactly what happened during the auto-conversion. As a result, other parts of the logic broke because the \code{rgbBytes} object could not be properly processed which lead to the application not working as expected. In this special case some accessors of the property were in need of the image conversion and others were not. Therefore, we did not put the image conversion into a custom accessor because we did not want to call \code{imageConverter!!.run()} every time the property was used. Placing it in the separate method \code{getConvertedRgbBytes()} has been a good decision.
+
+
+\begin{minipage}[t]{0.41\linewidth}
+	\begin{lstlisting}[style=standard, language=Java, label=code:bugSourceJava, caption={Java code that introduced a bug after using Android Studio's built-in Java to Kotlin converter.}]
+protected int[] getRgbBytes() {
+	imageConverter.run();
+	return rgbBytes;
+}
+	\end{lstlisting}
+\end{minipage}
+	\hfill
+\begin{minipage}[t]{0.48\linewidth}
+	\begin{lstlisting}[style=standard, language=Kotlin, label=code:bugSolutionKotlin, caption={Substituting the wrongly placed default Kotlin accessors with this method solved the problem.}]
+protected fun getConvertedRgbBytes(): IntArray? {
+	imageConverter!!.run()
+	return rgbBytes
+}
+	\end{lstlisting}
+\end{minipage}
 
 \subsection{Measuring The Decrease of The Size of The Code Base} %TODO: Check if this should rather be moved to the Results chapter
 
-Using the npm distribution of a tool named Count Lines of Code (cloc)\footnote{Original cloc project by Al Danial: \url{https://github.com/AlDanial/cloc}; cloc npm distribution by Kent C. Dodds: \url{https://www.npmjs.com/package/cloc}} we can easily count lines of Java and Kotlin code while ignoring blank lines and comment lines. This enables us to monitor how the shift from Java to Kotlin influenced the number of lines of code. With Perl, Node and npm installed on our machine,
+Using the npm distribution of a tool named Count Lines of Code (cloc)\footnote{Original cloc project by Al Danial: \url{https://github.com/AlDanial/cloc}\\cloc npm distribution by Kent C. Dodds: \url{https://www.npmjs.com/package/cloc}} we can easily count lines of Java and Kotlin code while ignoring blank lines and comment lines. This enables us to monitor how the shift from Java to Kotlin influenced the number of lines of code. With Perl, Node and npm installed on our machine,
 we run the following command which prints its output to stdout:
 
 \begin{lstlisting}[style=standard, language=bash, label=code:cloc, caption={npx cloc command with its options and arguments. Prints the lines of code analysis comapring files before and after the Java to Kotlin conversion. The output is also saved as cloc.csv and can be found in lens-david/thesis/raw\_data.}]
@@ -530,7 +552,7 @@ The \code{--by-file} option enables us to directly compare each Java file with K
 		helpers/CameraEvents	&	0	\\	\hline
 		helpers/FreezeAnalyzer	&	-6	\\	\hline
 		helpers/FreezeCallback	&	0	\\	\hline
-		helpers/ImageUtils	&	43	\\	\hline
+		helpers/ImageUtils	&	43	\\	\hline
 		helpers/Logger	&	6	\\	\hline
 		helpers/ModelConfig	&	-2	\\	\hline
 		helpers/ProcessingUnit	&	-2	\\	\hline
@@ -546,7 +568,7 @@ The \code{--by-file} option enables us to directly compare each Java file with K
 
 \section{Implementing Object Detection Using The TensorFlow Lite Framework}
 
-As mention in section \autoref{sec:previousState}, the existing image classification does not outsource the classification task to some remote server but performs the classification offline on the device itself. We adhere to the decision and implement the object detection analogously. The detection task is carried out locally using the same TensorFlow-Lite API as the image classification. We also display our detection on top of the live-stream received from the camera so that the user of the app can experience the object detection in real-time. All the same, there is some discrepancy to the existing set of functionalities built around the image classification. Only one model for object detection is currently available within the app and the detection logic cannot be applied to images that have been loaded from the storage of the device.
+As described in section \autoref{sec:previousState} the core feature of TUM-Lens v1.0 is image classification and the classification task is not outsourced to some remote server but performed offline on the device itself. We adhere to the decision and implement the object detection analogously. The detection task is carried out locally using the same TensorFlow-Lite API as the image classification. We also display our detection on top of the live-stream received from the camera so that the user of the app can experience the object detection in real-time. All the same, there is some discrepancy to the existing set of functionalities built around the image classification. Only one model for object detection is currently available within the app and the detection logic cannot be applied to images that have been loaded from the storage of the device.
 
 
 Graphic showing an overview of all app flows (old and new)
