--- a/thesis/settings.tex
+++ b/thesis/settings.tex
@@ -105,12 +105,12 @@
 }
 
 \lstdefinestyle{standard} {
+	basicstyle=\footnotesize\ttfamily, 
 	captionpos=b,
-	basicstyle=\ttfamily\footnotesize,
 	numbers=left,
 	numberstyle=\small,
 	showstringspaces=false,
-	tabsize=4,
+	tabsize=2,
 	frame=single,
 	breaklines=true,
 	aboveskip=1em,
