Finish Kotlin section and start writing about the implementation part

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -45,6 +45,21 @@ Best thesis ever:
 	urldate = {2021-07-31},
 	year = {2017},
 }
+@online{tfSampleAppGuide,
+	author = {Google Ireland Limited},
+	title = {Object detection  |  TensorFlow Lite Examples},
+	url = {https://www.tensorflow.org/lite/examples/object_detection/overview},
+	urldate = {2021-07-31},
+}
+@misc{tfSampleAppRepo,
+	author = {Yuqi Li and Tian Lin and Tiezhen Wang and Mark Daoust and Yash Katariya and Neal Wu and Abhinav Prakash and Billy Lamberta},
+	journal = {GitHub Repository},
+	publisher = {GitHub},
+	title = {TensorFlow Examples},
+	url = {https://github.com/tensorflow/examples/tree/master/lite/examples/object_detection/android},
+	urldate = {2021-07-31},
+	year = {2016},
+}
 @online{dl_ranking_2018,
    author = {Jeff Hale},
    journal = {Towards Data Science},
@@ -448,15 +463,6 @@ Best thesis ever:
 	title = {{MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications}},
 	url = {https://arxiv.org/abs/1704.04861v1},
 	year = {2017},
-}
-@online{dl_ranking_2018,
-	author = {Jeff Hale},
-	journal = {Towards Data Science},
-	month = {9},
-	title = {{Deep Learning Framework Power Scores 2018}},
-	url = {https://towardsdatascience.com/deep-learning-framework-power-scores-2018-23607ddf297a},
-	urldate = {2021-07-31},
-	year = {2018},
 }
 @online{nullPointerOverops,
 	author = {Alex Zhitnitsky},
