--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -185,7 +185,7 @@ Munich, \date \hspace{5cm} \author
 \end{center}
 \vspace{1cm}
 
-\lipsum[2]
+We migrate the entire codebase of the Android application TUM-Lens from Java to Kotlin. This facilitates the future development of the app as it makes the code more concise and error-proof. We elaborate on further advantages of the Kotlin language over Java and analyse how this migration lowered the lines of the existing code. Moreover, we expand the functionalities of the app by an object detection feature based on Google's open source deep learning framework TensorFlow Lite. The implementation follows in the previous TUM-Lens developer's footsteps and integrates the detection to entirely work on-device so that no data needs to be exchanged with external servers. On the object detection theory side, we distinguish object detection from other visual machine learning tasks and survey a selection of modern deep learning architectures - both for backbone and detector networks. In addition, we study the mechanics of a specific model, the SSD MobileNet v1, in detail as this is the model applied to the object detection task in TUM-Lens. This thesis expands Maximilian Jokel's previous work \textit{Implementing a TensorFlow-Slim based Android app for image classification} (2020).
 
 \cleardoublepage
 
